force.com/CALM/src/objects/DataSet__c.object
<CustomObject>
    <fields>
        <fullName>App__c</fullName>
        <label>App</label>
        <referenceTo>App__c</referenceTo>
        <relationshipLabel>DataSets (App)</relationshipLabel>
        <relationshipName>DataSets1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DataType</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GraphType__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GraphType</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DataSet</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataSets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>